--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Register Page
+    Register Page
 {% endblock %}
 
 {% block content %}
@@ -26,6 +26,11 @@ Register Page
             {{ form.password2(class="form-control", placeholder="Confirm Password") }}
 
             <br>
+
+            <div class="checkbox mb-3">
+               <h6>Already have an account?</h6>
+               <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
+            </div>
 
             {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
 
